# resume_website_2020

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  Procfile  README.md  app.py  heroku.yml  requirements.txt
.github/workflows/: docker-image.yml
app/: api_v1.py  app.py  html_v1.py
app/json/: bio_en.json  bio_it.json  bio_it_IT.json
app/locale/: base.pot
app/locale/en/LC_MESSAGES/: messages.mo  messages.po
app/static/css/: styles.css
app/static/js/: scripts.js
app/templates/resume/: index.html  layout.html
cloudflared/: README.md  manifest.yml
conf/: nginx.conf
conf/i18n/: flask_babel.conf  jinja_babel.conf
flask/: .bash_history  app.py
helm/resume-website/: Chart.yaml  cluster-issuer.yaml  values.yaml  www-maculade-com-cert.yaml
helm/resume-website/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  web-deployment.yaml
helm/resume-website/templates/tests/: test-connection.yaml
json/: bio_en_US.json  bio_it_IT.json
k8s/deployment/: resume-website.yaml
k8s/ingress/: resume-website.yaml
k8s/pod/: resume-website.yaml
k8s/svc/: ingress-svc.yaml  resume-website-lb.yaml  resume-website.yaml
pulumi/: .aws_config  Pulumi.devel.yaml  Pulumi.resume-website.devel.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/aws-eks/: .env  Pulumi.devel.yaml  Pulumi.yaml  __main__.py  vpc.py
pulumi/cloudflare/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  requirements.txt
tests/: conftest.py  test_browser.py  test_index.py
