[tool.poetry]
name = "resume_website"
version = "0.1.0"
description = ""
authors = ["Depo <teo@maculade.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.0.0"
pulumi-aws = "^4.0.0"
pulumi-eks = "^0.37.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
